--- a/PeenyPaint/app/src/main/res/values/strings.xml
+++ b/PeenyPaint/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Peeny Paint</string>
+    <string name="title_activity_menu">MenuActivity</string>
 </resources>
